--- a/WebApplication46/WebApplication46.csproj
+++ b/WebApplication46/WebApplication46.csproj
@@ -66,6 +66,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="2016-04-04\FormTabell.html" />
+    <Content Include="2016-04-04\Formular.html" />
     <Content Include="2016-04-04\index.html" />
     <Content Include="images\Hjul.jpg" />
     <Content Include="images\hjulet.jpg" />
