--- a/WebApplication46/WebApplication46.csproj
+++ b/WebApplication46/WebApplication46.csproj
@@ -72,6 +72,14 @@
     <Content Include="2016-04-04\Formular.html" />
     <Content Include="2016-04-04\index.html" />
     <Content Include="2016-04-04\Zuzammen.html" />
+    <Content Include="2016-04-05\images\Crane.png" />
+    <Content Include="2016-04-05\images\Lars.jpg" />
+    <Content Include="2016-04-05\images\WT.jpg" />
+    <Content Include="2016-04-05\index.html" />
+    <Content Include="2016-04-05\pages\tabbelenJajamensan.html" />
+    <Content Include="2016-04-05\styles\cellphone.css" />
+    <Content Include="2016-04-05\styles\computer.css" />
+    <Content Include="2016-04-05\styles\printer.css" />
     <Content Include="images\Hjul.jpg" />
     <Content Include="images\hjulet.jpg" />
     <Content Include="index2.html" />
