--- a/WebApplication46/WebApplication46.csproj
+++ b/WebApplication46/WebApplication46.csproj
@@ -73,6 +73,7 @@
     <Content Include="2016-04-04\index.html" />
     <Content Include="2016-04-04\Zuzammen.html" />
     <Content Include="2016-04-05\images\Crane.png" />
+    <Content Include="2016-04-05\images\hav.jpg" />
     <Content Include="2016-04-05\images\Lars.jpg" />
     <Content Include="2016-04-05\images\WT.jpg" />
     <Content Include="2016-04-05\index.html" />
