--- a/WebApplication46/WebApplication46.csproj
+++ b/WebApplication46/WebApplication46.csproj
@@ -83,6 +83,7 @@
     <Content Include="2016-04-05\styles\computer.css" />
     <Content Include="2016-04-05\styles\printer.css" />
     <Content Include="2016-04-05\tableWidth.html" />
+    <Content Include="2016-04-06\Bilder.html" />
     <Content Include="2016-04-06\images\hjulet.jpg" />
     <Content Include="2016-04-06\index.html" />
     <Content Include="2016-04-06\RadioButtons.html" />
