--- a/WebApplication46/WebApplication46.csproj
+++ b/WebApplication46/WebApplication46.csproj
@@ -95,6 +95,7 @@
     <Content Include="2016-04-11\styles\choklad.css" />
     <Content Include="2016-04-12\BootstrapElgiganten.html" />
     <Content Include="2016-04-12\bootstraping.html" />
+    <Content Include="2016-04-13\malin.html" />
     <Content Include="2016-04-13\natalie.html" />
     <Content Include="2016-04-13\nina.html" />
     <Content Include="Content\bootstrap-theme.css" />
